// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ESLint 7.0.0 7.0.0_error.js 1`] = `
[
  {
    "filePath": "7.0.0_error.js",
    "messages": [
      {
        "line": 7,
        "ruleId": "default-case-last",
        "severity": 2,
      },
      {
        "line": 18,
        "ruleId": "default-case-last",
        "severity": 2,
      },
      {
        "line": 31,
        "ruleId": "no-useless-backreference",
        "severity": 2,
      },
    ],
  },
]
`;

exports[`ESLint 7.1.0 7.1.0_error.js 1`] = `
[
  {
    "filePath": "7.1.0_error.js",
    "messages": [
      {
        "line": 6,
        "ruleId": "no-loss-of-precision",
        "severity": 1,
      },
      {
        "line": 12,
        "ruleId": "no-loss-of-precision",
        "severity": 1,
      },
    ],
  },
]
`;

exports[`ESLint 7.3.0 7.3.0_error.js 1`] = `
[
  {
    "filePath": "7.3.0_error.js",
    "messages": [
      {
        "line": 6,
        "ruleId": "no-promise-executor-return",
        "severity": 2,
      },
      {
        "line": 25,
        "ruleId": "no-unreachable-loop",
        "severity": 1,
      },
    ],
  },
]
`;

exports[`ESLint 7.14.0 7.14.0_error.js 1`] = `
[
  {
    "filePath": "7.14.0_error.js",
    "messages": [
      {
        "line": 2,
        "ruleId": "no-nonoctal-decimal-escape",
        "severity": 2,
      },
      {
        "line": 3,
        "ruleId": "no-nonoctal-decimal-escape",
        "severity": 2,
      },
    ],
  },
]
`;

exports[`ESLint 7.15.0 7.15.0_error.js 1`] = `
[
  {
    "filePath": "7.15.0_error.js",
    "messages": [
      {
        "line": 3,
        "ruleId": "no-unsafe-optional-chaining",
        "severity": 2,
      },
    ],
  },
]
`;
